[gd_scene load_steps=8 format=2]

[ext_resource path="res://Picture_Imports/Items/screenshot.png" type="Texture" id=1]
[ext_resource path="res://Picture_Imports/Items/square.png" type="Texture" id=2]
[ext_resource path="res://Picture_Imports/Items/restart.png" type="Texture" id=3]
[ext_resource path="res://Picture_Imports/Items/home.png" type="Texture" id=4]
[ext_resource path="res://Picture_Imports/Items/settings.png" type="Texture" id=5]
[ext_resource path="res://Scripts/PauseMenu.gd" type="Script" id=6]
[ext_resource path="res://Picture_Imports/Items/resume.png" type="Texture" id=7]

[node name="CanvasLayer" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 6 )

[node name="TextureRect" type="TextureRect" parent="."]
self_modulate = Color( 0, 0, 0, 0.411765 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause Menu" type="Control" parent="."]
self_modulate = Color( 0, 0, 0, 0.603922 )
use_parent_material = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Pause Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -346.0
margin_top = -68.5
margin_right = 346.0
margin_bottom = 68.5
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Pause Menu/VBoxContainer"]
margin_right = 692.0
margin_bottom = 137.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Home" type="TextureButton" parent="Pause Menu/VBoxContainer/HBoxContainer"]
margin_right = 132.0
margin_bottom = 137.0
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="TextureButton" parent="Pause Menu/VBoxContainer/HBoxContainer"]
margin_left = 140.0
margin_right = 272.0
margin_bottom = 137.0
texture_normal = ExtResource( 3 )
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="TextureButton" parent="Pause Menu/VBoxContainer/HBoxContainer"]
margin_left = 280.0
margin_right = 412.0
margin_bottom = 137.0
texture_normal = ExtResource( 5 )
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera" type="TextureButton" parent="Pause Menu/VBoxContainer/HBoxContainer"]
margin_left = 420.0
margin_right = 552.0
margin_bottom = 137.0
texture_normal = ExtResource( 1 )
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="TextureButton" parent="Pause Menu/VBoxContainer/HBoxContainer"]
margin_left = 560.0
margin_right = 692.0
margin_bottom = 137.0
texture_normal = ExtResource( 7 )
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Pause Menu/VBoxContainer/HBoxContainer/Home" to="." method="_on_Home_pressed"]
[connection signal="pressed" from="Pause Menu/VBoxContainer/HBoxContainer/Home" to="Pause Menu" method="_on_Home_pressed"]
[connection signal="pressed" from="Pause Menu/VBoxContainer/HBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Pause Menu/VBoxContainer/HBoxContainer/Restart" to="Pause Menu" method="_on_Restart_pressed"]
[connection signal="pressed" from="Pause Menu/VBoxContainer/HBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Pause Menu/VBoxContainer/HBoxContainer/Camera" to="." method="_on_Camera_pressed"]
[connection signal="pressed" from="Pause Menu/VBoxContainer/HBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Pause Menu/VBoxContainer/HBoxContainer/Resume" to="Pause Menu" method="_on_Resume_pressed"]
